# rfs_scheduler

./: .gitignore  README.md  check_process_error.py  pyproject.toml  requirements.txt  run.py  update.bat
config/: processes.py
pyagenda3/: dbops.py  projtypes.py  pyprocess.py  scheduler.py  timeops.py  types.py  utils.py
pyagenda3/database/: dbops.py  handler.py  ops.py
pyagenda3/database/sql/: commit_process.sql  commit_task.sql  create_process.sql  create_tasks.sql  delete_last_status.sql  delete_process.sql  edit_process.sql  has_last_status.sql  insert_last_process_status.sql  insert_last_status.sql  insert_ping_server.sql  insert_process.sql  ping_server.sql  select_active_ids.sql  select_active_process.sql  select_execution_id_waiting_process.sql  select_filtered_process.sql  select_ping_servers.sql  select_waiting_process.sql  select_waiting_process_ids.sql  setup_1_scheduled_processes_table.sql  setup_2_process_table.sql  setup_3_ping_table.sql  setup_4_last_status.sql  setup_process_table.sql  setup_tasks_table.sql  (+6 more)
pyagenda3/gui/: README.md  centralize.py  forms.py  historico.py  import_export_manager.py  main.py  ping.py  teste.drawio  teste.py  teste2.py  update.py
pyagenda3/services/: ping.py
sample/: processes.py  run.py
src/: db_operations.py  projtypes.py  pyprocess.py  scheduler.py  time_operations.py  timeops.py  utils.py
tests/: path_test.py  process_test.py  scheduler_test.py  test_database.py  test_path.py  test_pipe.py  test_process.py  test_scheduler.py  test_timeops.py  time_operations_test.py
tests/integration/: memory.py
(+11 files in other folders)
